# finance-ai-app

./: .gitignore  README.md
.trunk/: trunk.yaml
docs/: aws-tagging-strategy.md  design.md  ops-runbook.md  plan-ops-hardening.md  plan-phase2.md  plan-phase3.md  plan.md  sns-event-schema.md
financeaiapp-frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
financeaiapp-infra/: .gitignore  cdk.json  package-lock.json  package.json  (+3 more)
financeaiapp/app/FinancialAgent/: Dockerfile  main.py  pyproject.toml
financeaiapp/app/FinancialAgent/agents/: orchestrator.py  research_graph.py  research_tool.py  strategy_graph.py
financeaiapp/app/FinancialAgent/handlers/: briefing.py  watchlist.py
financeaiapp/app/FinancialAgent/infra/: cache.py  circuit_breaker.py  formatting.py  llm.py  logging_config.py  retry.py  secrets.py  sns.py
financeaiapp/app/FinancialAgent/nodes/: analyze.py  fetch_market.py  fetch_news.py
financeaiapp/app/FinancialAgent/prompts/: analyze.md  briefing.md  orchestrator.md
financeaiapp/app/FinancialAgent/schemas/: analysis.py  briefing.py  invoke.py  market.py  news.py  trading.py
financeaiapp/app/FinancialAgent/storage/: ddb.py  snapshots.py  trading.py
financeaiapp/app/FinancialAgent/tools/: briefing.py  compare_analysis.py  compare_tickers.py  news_previews.py  preferences.py  sessions.py  strategy.py  trading.py  watchlist.py  watchlist_report.py
financeaiapp/app/FinancialAgent/tools/sources/: alphavantage.py  classifier.py  coingecko.py  finnhub.py  frankfurter.py  googlenews.py  naver.py  okx.py  pykrx_adapter.py
(+43 files in other folders)
